force-app/main/default/objects/CRMC_PP__Grid_Setting__c/CRMC_PP__Grid_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Object to store Conga Grid Settings. (public so it&#39;s accessible via javascript.)</description>
    <label>Conga Grid Settings</label>
</CustomObject>