force-app/main/default/objects/CRMC_PP__Grid_Setting__c/fields/CRMC_PP__JSON__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__JSON__c</fullName>
    <description>The JSON Object that contains the setting information.</description>
    <label>JSON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>