force-app/main/default/objects/CRMC_PP__Grid_Setting__c/fields/CRMC_PP__Owner__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Owner__c</fullName>
    <description>The user or profile that this setting pertains to.  Null for global settings</description>
    <label>Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>