force-app/main/default/objects/CRMC_PP__Grid_Setting__c/fields/CRMC_PP__Owner_Label__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Owner_Label__c</fullName>
    <label>Owner Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>