force-app/main/default/objects/CRMC_PP__Grid_Setting__c/fields/CRMC_PP__Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Owner_Type__c</fullName>
    <description>Which type of entity the owner is - profile, user, global.</description>
    <label>Owner Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>