force-app/main/default/objects/CRMC_PP__Grid_Setting__c/fields/CRMC_PP__Setting_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Setting_Type__c</fullName>
    <description>The Type of the setting.  Used for organizing the grids in the settings page</description>
    <label>Setting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>